# pdf_toc_generator

./: .gitignore  LICENSE  README.md  check_bookmarks.py  debug_approx.py  debug_minto.py  pdf_toc_generator.ipynb  pdf_toc_generator.py  pyproject.toml
