[project]
name = "pdf-toc-generator"
version = "1.0.0"
description = "Automatically generate and add bookmarks to PDF files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymupdf>=1.23.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["pdf", "table-of-contents", "bookmarks", "toc", "pymupdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
pdf_toc_generator = "pdf_toc_generator:main"
